<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorAmazigh"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu"
                android:fontFamily="@font/fonts"
                android:textColor="@color/white"
                android:textSize="42sp"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="220dp"
            android:text="@string/app_name"
            android:fontFamily="@font/moonbold"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="42sp" />
        
        <Button
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:textColor="@color/white"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="@font/moonbold"
            android:text="@string/speel"/>

        <Button
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="@font/moonbold"
            android:textColor="@color/white"
            android:text="@string/oefen"/>

        <Button
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="@font/moonbold"
            android:text="@string/score"
            android:textColor="@color/white" />

        <Button
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="@font/moonbold"
            android:text="@string/uitleg"
            android:textColor="@color/white" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/backgroundblue"
        android:background="@color/colorAmazigh">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="300dp"
            android:layout_height="500dp"
            android:src="@drawable/ic_berber_flag"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/logotext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_gravity="center"
            android:fontFamily="@font/moonbold"
            android:textColor="@color/colortextAmazigh"
            android:textSize="52sp" />
    </LinearLayout>

    
    
    

</androidx.constraintlayout.widget.ConstraintLayout>