<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginBottom="50px"
            android:fontFamily="@font/moonbold"
            android:text="Uitleg"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/colorAmazigh"
            android:textSize="42sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60px"
            android:fontFamily="@font/moonbold"
            android:layout_gravity="center"
            android:text="Spelen"
            android:textColor="@color/colorAmazigh"
            android:textSize="25sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20px"
            android:fontFamily="@font/moonbold"
            android:gravity="center"
            android:text="@string/Spelen"
            android:textColor="@color/colorAmazigh"
            android:textSize="19sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60px"
            android:layout_marginTop="60px"
            android:fontFamily="@font/moonbold"
            android:layout_gravity="center"
            android:text="Oefenen"
            android:textColor="@color/colorAmazigh"
            android:textSize="25sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20px"
            android:fontFamily="@font/moonbold"
            android:gravity="center"
            android:text="@string/Oefenen"
            android:textColor="@color/colorAmazigh"
            android:textSize="19sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60px"
            android:layout_marginTop="60px"
            android:fontFamily="@font/moonbold"
            android:layout_gravity="center"
            android:text="Score"
            android:textColor="@color/colorAmazigh"
            android:textSize="25sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20px"
            android:fontFamily="@font/moonbold"
            android:gravity="center"
            android:text="@string/Score"
            android:textColor="@color/colorAmazigh"
            android:textSize="19sp"/>
    </LinearLayout>
    </ScrollView>